--- a/views/index.html
+++ b/views/index.html
@@ -17,96 +17,98 @@
           <li> I can get a list of the most recently submitted search strings.</li>
         </ol>
         <h1>Example Query Usage</h1>
-        <h4><span>https://img-search-abstraction.glitch.me/lolcats%20funny?offset=10</span></h4>
-        <h4><span>https://img-sal.herokuapp.com/latest</span></h4>
+        <h4><span>https://img-search-abstraction.glitch.me/new/funny%20cats?offset=10</span></h4>
+        <h4><span>https://img-search-abstraction.glitch.me/latest</span></h4>
         <h1>Example Query Output</h1>
         <p>[{</p><p><span>
-  "url": "http://data.whicdn.com/images/34129178/large.jpg",
-  "snippet": "this image include: funny",
-  "thumbnail": "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQ9wRI3mrK8iXg7mcSZx8yfpwlR2W7dCXA3lGHvQ28SnKGsvGYt6eIflAIq",
-  "context": "http://weheartit.com/entry/group/4233028"
+  "url": "https://cdn.pixabay.com/photo/2016/04/16/23/07/cat-1333926_150.jpg",
+  "tags":"cat, wink, funny",
+  "thumbnail":"https://cdn.pixabay.com/user/2017/06/05/21-28-42-712_250x250.png",
+  "context":"https://pixabay.com/en/cat-wink-funny-fur-animal-red-1333926/"
 </span></p><p>}, {</p><p><span>
-  "url": "https://s-media-cache-ak0.pinimg.com/736x/bc/32/f3/bc32f3896ebe6cfc48d489f5e7674d7a.jpg",
-  "snippet": "#lolcats funny cats:",
-  "thumbnail": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBhYqlh_TWw8ycQeSpt9MwPJLIbL7X9dFCjPpEmSyaIpMQlI-AXN75EUo",
-  "context": "https://www.pinterest.com/pin/51298883228847846/"
+  "url":"https://cdn.pixabay.com/photo/2015/05/11/11/35/cat-762342_150.jpg",
+  "tags":"cat, meadow, cute",
+  "thumbnail":"https://cdn.pixabay.com/user/2017/06/05/21-28-42-712_250x250.png",
+  "context":"https://pixabay.com/en/cat-meadow-cute-funny-solar-762342/"
 </span></p><p>}, {</p><p><span>
-  "url": "http://cdnstatic.visualizeus.com/thumbs/36/0b/funny,lolcat,cats,cat,lolcats,humor-360ba427d350494fb4e69b209a93a814_h.jpg",
-  "snippet": "funny-pictures-cat-breaks-the-",
-  "thumbnail": "https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcT3LYyfkNxQWcG6wmB6M2FgUZpMXbjxXhc-g4CJ18luXAvDBdBNrzXAZQ8",
-  "context": "http://vi.sualize.us/funny_pictures_breaks_the_sound_barrier_lolcats_funny_cats_cat_picture_45U4.html"
+  "url":"https://cdn.pixabay.com/photo/2014/05/07/06/44/animal-339400_150.jpg",
+  "tags":"animal, cat, kitten",
+  "thumbnail":"https://cdn.pixabay.com/user/2014/05/07/06-49-11-983_250x250.jpg",
+  "context":"https://pixabay.com/en/animal-cat-kitten-funny-yawning-339400/"
 </span></p><p>}, {</p><p><span>
-  "url": "https://s-media-cache-ak0.pinimg.com/736x/41/d7/b2/41d7b23586ee2fb386d5c894abedd5ab.jpg",
-  "snippet": "Saved from",
-  "thumbnail": "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcR8mlKrDxEzOh9PqCFiDhsdS-xwazvwTibd325l1DAUCC5dUUbq3ax9qI7M",
-  "context": "https://www.pinterest.com/pin/233131718181511758/"
+  "url":"https://cdn.pixabay.com/photo/2016/09/01/14/15/doll-1636212_150.jpg",
+  "tags":"doll, clown, sad",
+  "thumbnail":"https://cdn.pixabay.com/user/2017/06/05/21-28-42-712_250x250.png",
+  "context":"https://pixabay.com/en/doll-clown-sad-cat-1636212/"
 </span></p><p>}, {</p><p><span>
-  "url": "http://s2.favim.com/orig/33/cat-funny-lol-lolcats-mean-Favim.com-261389.jpg",
-  "snippet": "cat, funny, lol, lolcats, mean",
-  "thumbnail": "https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTjH2_3xIIzquPGN-GVgivEQ1Ib4T9W9mCRjcYBsvLNB-e_aWb213o2-qo4",
-  "context": "http://favim.com/image/261389/"
+  "url":"https://cdn.pixabay.com/photo/2016/09/03/23/48/luggage-1643010_150.jpg",
+  "tags":"luggage, antique, cat",
+  "thumbnail":"https://cdn.pixabay.com/user/2017/06/05/21-28-42-712_250x250.png",
+  "context":"https://pixabay.com/en/luggage-antique-cat-1643010/"
 }</span></p><p>, {</p><p><span>
-  "url": "http://cdn.playbuzz.com/cdn/d68ef92c-3973-4b00-98c9-913e423d83ff/f9ec20e0-bb55-48b1-8789-bb51947e4d12.jpg",
-  "snippet": "Whats a Summary of Your life?",
-  "thumbnail": "https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRWWY7kdyrsQXsyW8fqoVs6_I-RwRm1BFpduC6imCrnbsbuT0Q5pmqrHrg",
-  "context": "http://www.playbuzz.com/mikeyh10/whats-a-summary-of-your-life"
+  "url":"https://cdn.pixabay.com/photo/2016/09/06/20/52/luggage-1650189_150.jpg",
+  "tags":"luggage, antique, teddy",
+  "thumbnail":"https://cdn.pixabay.com/user/2017/06/05/21-28-42-712_250x250.png",
+  "context":"https://pixabay.com/en/luggage-antique-teddy-cat-hidden-1650189/"
 </span></p><p>}, {</p><p><span>
-  "url": "http://cdnstatic.visualizeus.com/thumbs/0d/26/funny,cat,catfunny,lolcats,cute,cats-0d26770e7aaca32b2a03e601df429b17_h.jpg",
-  "snippet": "funny-pictures-cat-is-excited-",
-  "thumbnail": "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRDeAPTYfvumD5duVMM0OqTcyNdQeSqHM5gdm3sHSjV4w4odzQrlcSIRAI",
-  "context": "http://vi.sualize.us/funny_pictures_is_excited_about_cat_funny_ribbons_lol_cats_picture_6gKf.html"
+  "url":"https://cdn.pixabay.com/photo/2017/09/18/20/36/cat-2763152_150.jpg",
+  "tags":"cat, mackerel, wildlife photography",
+  "thumbnail":"https://cdn.pixabay.com/user/2017/06/05/21-28-42-712_250x250.png",
+  "context":"https://pixabay.com/en/cat-mackerel-wildlife-photography-2763152/"
 </span></p><p>}, {</p><p><span>
-  "url": "http://cdnstatic.visualizeus.com/thumbs/ef/8f/ef8f397db7ede987b542197dcb5c2f88_h.jpg",
-  "snippet": "lolcats %27n%27 funny pictures",
-  "thumbnail": "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRqutfDXt3TFGEwFWpx1Wz_M8LE96eXKZssHlyPq63MVyfwCchVmi5JYwvV",
-  "context": "http://vi.sualize.us/quotes_brot_youz_a_flower_lolcats_n_funny_pictures_of_cats_i_can_has_cheezbur_picture_qCWH.html"
+  "url":"https://cdn.pixabay.com/photo/2017/09/18/20/36/cat-2763151_150.jpg",
+  "tags":"cat, mackerel, wildlife photography",
+  "thumbnail":"https://cdn.pixabay.com/user/2017/06/05/21-28-42-712_250x250.png",
+  "context":"https://pixabay.com/en/cat-mackerel-wildlife-photography-2763151/"
 </span></p><p>}, {</p><p><span>
-  "url": "https://i.ytimg.com/vi/tRzXptpC3_U/hqdefault.jpg",
-  "snippet": "funny lolcats and loldogs",
-  "thumbnail": "https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcS_dKvb6pMA0bod00g0v1Bk3YakSY7H4HYwpu268AqUK8pPiSdlUh9pEnYh",
-  "context": "https://www.youtube.com/watch?v=tRzXptpC3_U"
+  "url":"https://cdn.pixabay.com/photo/2017/09/14/21/51/cat-2750518_150.jpg",
+  "tags":"cat, mackerel, nikon",
+  "thumbnail":"https://cdn.pixabay.com/user/2017/06/05/21-28-42-712_250x250.png",
+  "context":"https://pixabay.com/en/cat-mackerel-nikon-photograph-2750518/"
 </span></p><p>}, {</p><p><span>
-  "url": "http://data.whicdn.com/images/29044507/large.jpg",
-  "snippet": "Most popular tags for this",
-  "thumbnail": "https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRre4NmoJmEOVxSi1VNAumtmb6nuuTpYrLlCPGuOwXXF-R34ngusPjC144",
-  "context": "http://weheartit.com/entry/group/1764108"
+  "url":"https://cdn.pixabay.com/photo/2017/09/07/18/46/cat-2726256_150.jpg",
+  "tags":"cat, animal, cute",
+  "thumbnail":"https://cdn.pixabay.com/user/2017/02/05/11-36-17-931_250x250.jpg",
+  "context":"https://pixabay.com/en/cat-animal-cute-pet-kitten-2726256/"
 }]</span></p>
         <h1>Example latest Output</h1>
         <p>[{</p><p><span>
-  "term": "lolcats funny",
-  "when": "2016-01-23T04:21:19.441Z"</span></p><p>
+  "query":"funny dogs",
+  "date":"2017-10-09T07:10:26.646Z"
+ </span></p><p>
 }, {</p><p><span>
-  "term": "lolcats funny",
-  "when": "2016-01-23T04:20:26.237Z"</span></p><p>
+  "query": "funny cats",
+  "date": "2017-10-09T07:01:06.690Z"</span></p><p>
 }, {</p><p><span>
-  "term": "lolcats funny",
-  "when": "2016-01-23T02:06:32.898Z"</span></p><p>
+  "query": "funny dogs",
+  "date": "2017-10-09T07:00:45.870Z"</span></p><p>
 }, {</p><p><span>
-  "term": "lolcats sad",
-  "when": "2016-01-23T01:29:55.894Z"</span></p><p>
+  "term": "funny dogs",
+  "date":"2017-10-09T07:00:09.160Z"</span></p><p>
 }, {</p><p><span>
-  "term": "lolcats funny",
-  "when": "2016-01-23T01:29:45.727Z"</span></p><p>
+  "term": "latest",
+  "date":"2017-10-09T06:57:40.162Z"</span></p><p>
 }, {</p><p><span>
-  "term": "lolcats funny",
-        "when": "2016-01-23T00:43:49.365Z"</span></p><p>
+  "term": "funny cats",
+  "date":"2017-10-09T06:56:15.153Z"</span></p><p>
 }, {</p><p><span>
-  "term": "lolcats funny",
-  "when": "2016-01-22T23:47:24.660Z"</span></p><p>
+  "term": "funny cats",
+  "date":"2017-10-09T06:55:22.906Z"</span></p><p>
 }, {</p><p><span>
-  "term": "lolcats funny",
-  "when": "2016-01-22T23:43:12.142Z"</span></p><p>
+  "term": "funny cats",
+  "date":"2017-10-09T06:55:05.921Z"</span></p><p>
 }, {</p><p><span>
-  "term": "lolcats funny",
-  "when": "2016-01-22T23:35:59.976Z"</span></p><p>
+  "term": "funny cats",
+  "date":"2017-10-09T06:46:38.577Z"</span></p><p>
 }, {</p><p><span>
-  "term": "lolcats funny",
-        "when": "2016-01-22T23:13:07.220Z"</span></p><p>
+  "term": "funny cats",
+  "date":"2017-10-09T06:41:54.461Z"</span></p><p>
 }]</p>
       </div>
      <footer class="footer">
        <p>Created by : <a href="https://github.com/utsavkapoor" target="_blank">Utsav Kapoor</a></p>
        <p>Free Code Camp Challenge: <a href="https://www.freecodecamp.org/challenges/image-search-abstraction-layer" target="_blank">Image Search Abstraction Layer</a></p>
+       <p>Search Engine API Provided by <br><a href="https://pixabay.com/" target="_blank" style="float:left;"><img src="https://pixabay.com/static/img/public/medium_rectangle_a.png" alt="Pixabay" style="height:50%;width:50%;float:left;"></a></p>
      </footer>
    </body>
 
